<resources>
    <string name="app_name">AppFood</string>
    <string name="txt_email">Email</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="txt_iniciar_sesion">Iniciar sesión</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_apellido">Apellido</string>
    <string name="txt_edad">Edad</string>
    <string name="txt_verifique_la_contrasena">Verifique la contraseña</string>
    <string name="txt_regresar">Regresar</string>
    <string name="txt_inicio">Inicio</string>
    <string name="txt_cesta">Cesta</string>
    <string name="txt_perfil">Perfil</string>
    <string name="txt_favoritos">Favoritos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_nombre_de_usuario">Nombre de Usuario</string>
    <string name="txt_correo">correo@ejemplo.com</string>
    <string name="txt_editar_perfil">Editar Perfil</string>
    <string name="txt_cerrar_sesion">Cerrar Sesión</string>
    <string name="txt_editar_foto">Editar foto</string>
    <string name="txt_borrar_foto">Borrar foto</string>
    <string name="txt_edad_mensaje">Edad:</string>
    <string name="txt_age">años</string>
    <string name="txt_pedidos">Pedidos</string>
    <string name="txt_pedidos_realizados">Pedidos realizados</string>
    <string name="txt_menu">Menu</string>
    <string name="txt_carrito_de_compras">Carrito de compras</string>
    <string name="txt_eliminar">Eliminar</string>
    <string name="txt_precio">Precio:</string>
</resources>